Source for hierarchical labels

--- a/azureconfig/appsettings-ci/appsettings-clientservices.json
+++ b/azureconfig/appsettings-ci/appsettings-clientservices.json
@@ -69,7 +69,25 @@
                 "Name": "DFS.Backoffice",
                 "ConnectionString": "Server=tcp:additiv-sqlsv-shared.database.windows.net,1433;Initial Catalog=additiv-ci-tenant;Persist Security Info=True;User ID=thisistheuserdev;Password=Thisisthepassword10!dev;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
             }
+        ],
+        "ContactIndexedFields": [
+            "personalInformation.displayName",
+            "personalInformation.firstName",
+            "personalInformation.lastName",
+            "personalInformation.dateOfBirth",
+            "personalInformation.countryOfBirth",
+            "relationshipInformation.externalId",
+            "relationshipInformation.contactType",
+            "relationshipInformation.lastClientContactDate",
+            "relationshipInformation.lastClientLoginDate",
+            "relationshipInformation.isProspect",
+            "relationshipInformation.contactStatus",
+            "communicationMethods.primaryAddressCountry",
+            "investmentInformation.calculatedRiskCategory",
+            "investmentInformation.chosenRiskCategory",
+            "investmentInformation.totalNumberOfPortfolios",
+            "investmentInformation.totalValueOfPortfolios",
+            "investmentInformation.reportingCurrency"
         ]
-        
     }
 }
